<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InterCellar</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Paramètres</string>
    <string name="title_activity_bottle">Mes Bouteilles</string>
    <string name="title_activity_cellar">Ma Cave</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottle_details">Détails de la bouteille</string>
    <string name="add_a_bottle">Ajouter une bouteille</string>
    <string name="title_activity_add_bottle">Ajouter une bouteille</string>
    <string name="bottle_name">Nom</string>
    <string name="bottle_year">Année de mise en bouteille</string>
    <string name="bottle_price">Prix</string>
    <string name="bottle_picture">Photographie</string>
    <string name="bottle_description">Description</string>
    <string name="bottle_type">Type de vin</string>
    <string name="bottle_market">Marché d\'acquisition</string>
    <string name="bottle_coordinates">Position sur l\'étagère</string>
    <string name="bottle_chateau">Chateau</string>
    <string name="bottle_shelve">Numéro d\'étagère</string>
    <string name="bottle_successfully_added">Bouteille ajoutée avec succès</string>
    <string name="title_activity_add_chateau">Ajouter un Chateau</string>
    <string name="add_a_chateau">Ajouter un Chateau</string>
    <string name="select_a_chateau">Sélectionner un chateau</string>
    <string name="chateau_region">Région</string>
    <string name="chateau_domain">Domaine</string>
    <string name="no_bottle">Nous n\'avons trouvé aucune bouteille. Essayez d\'en ajouter une !</string>
    <string name="an_error_occured_while_creating_chateau">Une erreur est survenue lors de la création du chateau</string>
    <string name="edit_bottle">Editer la bouteille</string>
    <string name="bottle_successfully_edited">La bouteille a bien été éditée</string>
    <string name="add_rating">Ajouter une note</string>
    <string name="title_activity_add_rating">Ajouter une note</string>
    <string name="rating_rate">Note</string>
    <string name="rating_comment">Commentaire</string>
    <string name="rating_date">Date</string>
    <string name="add">Ajouter</string>
    <string name="edit">Editer</string>
    <string name="ratings">Notes</string>
    <string name="given_on">donnée le</string>
    <string name="comment">Commentaire :</string>
    <string name="title_activity_shelf">Etagère</string>
    <string name="rate_is_required">La note est requise</string>
    <string name="comment_is_required">Un commentaire est requis</string>
    <string name="name_is_required">Le nom est obligatoire</string>
    <string name="price_is_required">Le prix est requis</string>
    <string name="type_is_required">Le type doit être renseigné</string>
    <string name="year_is_required">L\'année est requise</string>
    <string name="search_bottle">Rechercher une bouteille</string>
    <string name="title_activity_search_bottle">SearchBottleActivity</string>
    <string name="search_results_for">Résultats de la recherche :</string>
    <string name="domain_is_required">Le domaine est requis</string>
    <string name="region_is_required">La région est obligatoire</string>
    <string name="scan_barcode">Scanner le code bar</string>
    <string name="scan_error">Une erreur est survenue lors du scan du code bar</string>
    <string name="scan_content">Code bar</string>
    <string name="scan_format">Format du code bar</string>
    <string name="delete_bottle">Supprimer la bouteille</string>
    <string name="delete">Supprimer</string>
    <string name="cancel">Annuler</string>
    <string name="bottle_deleted">Bouteille supprimée</string>
    <string name="are_you_sure">Êtes-vous certain de vouloir faire cela ?</string>
    <string name="yes">Oui</string>
    <string name="search_bottle_by_bar_code">Chercher une bouteille par code bar</string>
    <string name="no_bottle_found_with_that_barcode">Aucune bouteille trouvée portant ce code bar</string>
    <string name="generate_dummies">Générer un jeu d\'essai</string>
    <string name="dummies_generated">Jeu d\'essai généré</string>
    <string name="title_activity_cellar_details">CellarDetailsActivity</string>
    <string name="no_ratings_yet">Pas de notes pour le moment</string>
    <string name="bar_code_exists">Le code bar scanné existe déjà</string>
</resources>
