<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="p54.intercellar.screen.BottleDetailsActivity">
    <item android:id="@+id/action_edit_bottle"
        android:title="@string/edit_bottle"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_edit"
        android:onClick="onEditClick"/>
    <item android:id="@+id/action_add_rating"
        android:title="@string/add_rating"
        android:orderInCategory="120"
        app:showAsAction="never"
        android:onClick="onAddRatingClick"/>
    <item android:id="@+id/action_delete_bottle"
        android:title="@string/delete_bottle"
        android:orderInCategory="130"
        app:showAsAction="never"
        android:onClick="onDeleteClick"/>
</menu>
