<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">


        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:stretchColumns="*"
            android:shrinkColumns="*"
            android:padding="16dp">
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingBottom="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/no_bottle"
                    android:id="@+id/text_view_no_bottle"
                    android:layout_span="2"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="20dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/bottle_name"
                    android:id="@+id/text_view_bottle_name"
                    android:layout_span="2"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="15dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/image_bottle_piture"
                    android:background="@color/background_material_dark"
                    android:contentDescription="@string/bottle_picture"
                    android:layout_below="@+id/label_bottle_picture"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_span="2" />
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/bottle_year"
                    android:id="@+id/label_bottle_year"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/bottle_year"
                    android:id="@+id/text_view_bottle_year"
                    android:paddingLeft="15dp"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/bottle_price"
                    android:id="@+id/label_bottle_price"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/bottle_price"
                    android:id="@+id/text_view_bottle_price"
                    android:paddingLeft="15dp"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/bottle_market"
                    android:id="@+id/label_bottle_market"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/bottle_market"
                    android:id="@+id/text_view_bottle_market"
                    android:paddingLeft="15dp"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/bottle_type"
                    android:id="@+id/label_bottle_type"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/bottle_type"
                    android:id="@+id/text_view_bottle_type"
                    android:paddingLeft="15dp"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/bottle_description"
                    android:id="@+id/label_bottle_description"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/bottle_description"
                    android:id="@+id/text_view_bottle_description"
                    android:paddingLeft="15dp"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginBottom="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/bottle_chateau"
                    android:id="@+id/label_bottle_chateau"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/bottle_chateau"
                    android:id="@+id/text_view_bottle_chateau"
                    android:paddingLeft="15dp"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingBottom="20dp">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_bottle"
                    android:id="@+id/button_edit_bottle"
                    android:layout_span="2"
                    android:onClick="onEditClick"/>
            </TableRow>
            <TableRow
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <fragment
                    android:layout_span="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:name="p54.intercellar.view.RatingsFragment"
                    android:id="@+id/fragment_rating_list"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/fragment_bottle_details"
                    tools:layout="@layout/fragment_ratings" />
            </TableRow>
        </TableLayout>

</ScrollView>